--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.2",
-    "date-fns": "^4.1.0",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.4",
+    "@mui/x-date-pickers": "^7.26.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.2"
   },
