--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-calendar": "^5.1.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "swiper": "^11.2.2"
   },
   "devDependencies": {
