--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "react-select": "^5.10.1",
     "swiper": "^11.2.2"
   },
   "devDependencies": {
